<resources>
    <string name="app_name">Dialogs</string>
    <string name="Login">Iniciar sesion</string>
    <string name="Sign_in">Registrarse</string>
    <string name="ActosotfApp">ActoSoft App</string>
    <string name="EmailHint">Correo Electronico</string>
    <string name="PassHint">Contraseña</string>
    <string name="PassHintConfirm">Confirmar Contraseña</string>
    <string name="Positive">Entrar</string>
    <string name="Negative">Cancelar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="Logout">Cerrar sesion</string>

</resources>
